directives (components), controller and service Unit Tests

--- a/src/app/components/errorMessage/error-message.html
+++ b/src/app/components/errorMessage/error-message.html
@@ -1,6 +1,6 @@
-<div class="mdl-cell mdl-cell--12-col mdl-typography--text-center">
-	<h4>Error Loading Planets!</h4>
-	<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
+<div class="error-message mdl-cell mdl-cell--12-col mdl-typography--text-center">
+	<h4 class="error-message__title">Error Loading Planets!</h4>
+	<a class="error-message__retry mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
 		ng-click="vm.retry()">
 		<i class="material-icons">autorenew</i> Retry
 	</a>
