--- a/src/app/components/planetInfo/planet-info.html
+++ b/src/app/components/planetInfo/planet-info.html
@@ -1,4 +1,4 @@
-<div class="mdl-card mdl-shadow--2dp planet-info">
+<div class="planet-info mdl-card mdl-shadow--2dp planet-info">
     <div class="mdl-card__title planet-info__title">
         <h2 class="mdl-card__title-text">{{::vm.planet.name}}</h2>
         <span ng-if="vm.planet.warning" class="planet-info__title--warning">{{::vm.planet.warning}}</span>
