--- a/src/app/index.less
+++ b/src/app/index.less
@@ -6,7 +6,7 @@
 // endbower
 
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,400,500,700);
-@import url(main/main.less);
+// @import url(main/main.less);
 
 @font-face {
   font-family: 'Material Icons';
@@ -34,6 +34,7 @@
   word-wrap: normal;
   margin:0 10px;
   vertical-align: bottom;
+  color: #666;
 
   /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
